--- a/development/backend/satellite/communication.mdx
+++ b/development/backend/satellite/communication.mdx
@@ -46,6 +46,7 @@ The satellite communication system includes:
 - Satellites register with backend and receive API keys
 - Initial status set to 'inactive' for security
 - API keys stored as Argon2 hashes in database
+- Satellite URL sent during registration (optional - auto-detected if not provided)
 
 **Activation Process**:
 - Satellites send heartbeat after registration
@@ -82,8 +83,8 @@ The system uses three distinct communication patterns:
 
 **Heartbeat (Satellite → Backend, Periodic)**:
 - Satellites report status every 30 seconds
-- Contains: System metrics, process counts, resource usage
-- Used for: Health monitoring, capacity planning
+- Contains: System metrics, process counts, resource usage, satellite URL (first heartbeat only)
+- Used for: Health monitoring, capacity planning, satellite URL updates
 
 **Events (Satellite → Backend, Immediate)**:
 - Satellites emit events when actions occur, batched every 3 seconds
@@ -191,6 +192,7 @@ Satellites report health and performance metrics:
 - Disk usage and network connectivity status
 - Process count and resource utilization
 - Uptime and stability indicators
+- Satellite URL (first heartbeat after startup only) - Updates public URL for satellite discovery
 
 **Process Metrics**:
 - Individual MCP server process status
@@ -259,6 +261,7 @@ The satellite system integrates with existing DeployStack schema through 5 speci
 - Type classification (global/team) and ownership
 - Capability tracking and status monitoring
 - API key management and authentication
+- Satellite URL tracking - Publicly accessible URL updated during registration and first heartbeat
 
 **Command Queue** (`satelliteCommands`):
 - Priority-based command orchestration
