--- a/self-hosted/docker-compose.mdx
+++ b/self-hosted/docker-compose.mdx
@@ -166,6 +166,7 @@ The satellite must be deployed separately after completing the setup wizard:
    **For local development (connecting from same machine):**
    ```bash
    docker run -d \
+     --user 1001:1001 \
      --network <your-network-name> \
      -p 3001:3001 \
      -e DEPLOYSTACK_BACKEND_URL="http://deploystack-backend:3000" \
@@ -180,6 +181,7 @@ The satellite must be deployed separately after completing the setup wizard:
    **For remote access (connecting from MCP clients via domain/IP):**
    ```bash
    docker run -d \
+     --user 1001:1001 \
      --network <your-network-name> \
      -p 3001:3001 \
      -e DEPLOYSTACK_BACKEND_URL="http://deploystack-backend:3000" \
