--- a/self-hosted/quick-start.mdx
+++ b/self-hosted/quick-start.mdx
@@ -228,10 +228,13 @@ After completing the basic backend and frontend setup, deploy at least one satel
     The satellite requires a running backend. If the backend is not reachable, the satellite will exit immediately. Make sure the backend is running before proceeding.
     </Warning>
 
+    <Info>
+    **Automatic Permission Handling**: The satellite container automatically fixes Docker volume permissions on startup. This ensures credentials can be saved even when volumes have root ownership. You may notice a brief delay (~5 seconds) during first startup while permissions are being fixed.
+    </Info>
+
     **For local development (connecting from same machine):**
     ```bash
     docker run \
-      --user 1001:1001 \
       --network <your-network-name> \
       -p 3001:3001 \
       -e DEPLOYSTACK_BACKEND_URL="http://deploystack-backend:3000" \
@@ -248,7 +251,6 @@ After completing the basic backend and frontend setup, deploy at least one satel
     **For remote access (connecting from MCP clients via domain/IP):**
     ```bash
     docker run \
-      --user 1001:1001 \
       --network <your-network-name> \
       -p 3001:3001 \
       -e DEPLOYSTACK_BACKEND_URL="http://deploystack-backend:3000" \
